# lastix

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: gcc-x86.yml  gcc.yml
cmake/: lastix.cmake
core/: CMakeLists.txt
core/lastix/core/: arc.hpp  box.hpp  diagnostics.cpp  diagnostics.hpp  error.cpp  error.hpp  memory.hpp  number.hpp  option.hpp  result.hpp
core/lastix/trait/: from.hpp  sync.hpp
examples/: CMakeLists.txt
examples/core/: CMakeLists.txt  arc.cpp  box.cpp  error.cpp  option.cpp  result.cpp
tests/: CMakeLists.txt
tests/core/: arc.cpp  box.cpp  memory_helpers.cpp  memory_helpers.hpp  result.cpp
